--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 			<div class="body-margin card body-card-shadow" id="show_content">
 				<!-- Header -->
 				<div class="col-lg-12 header-padding" align="center">
-		  			<h3 class="header-title small-heading-shadow padding-top-1em">We are no longer two, God has joined us together</h3>
+		  			<h3 class="header-title small-heading-shadow">We are no longer two, God has joined us together</h3>
 				</div>
 				<!-- Header end -->
-				<section  class="banner-section-padding">
+				<section>
 					<!-- Banner name container -->
-					<div class="container-fluid">
+					<div class="container-fluid padding-bottom-2em" >
 						<div class="section card banner-map-card-shadow card-border-none banner-bg-image img-fluid">
-							<div class="card-body">
+							<div class="card-body padding-top-bottom">
 								<div class="container" align="center">
 									<div class="row">
-										<div class="col-lg-5" >
+										<div class="col-lg-5">
 											<h2 class="banner-couple-name heading-text-shadow">Umasankar</h2>
 										</div>
 										<div class="col-lg-2">
@@ -76,7 +76,7 @@
 					</div>
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid">
+							<img src="images/border1.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 					<!-- Banner name container ends -->
@@ -116,7 +116,7 @@
 					</div>
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid">
+							<img src="images/border1.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 
@@ -168,12 +168,12 @@
 					<!-- Counter Timer ends-->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid">
+							<img src="images/border1.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 
 					<!--Wedding Details -->
-					<section class="section center-text">
+					<section class="section center-text padding-top-bottom">
 						<div class="container-fluid">
 							<div class="row">
 								<div class="col-sm-1"></div>
@@ -251,7 +251,7 @@
 					<!--Wedding Details ends -->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid">
+							<img src="images/border1.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 
@@ -271,11 +271,16 @@
 						</div>
 					</div>
 					<!-- Wedding Welcome area-->
+					<div class="row" align="center">
+						<div class="col-lg-12 padding-top-bottom">
+							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+						</div>
+					</div>
 
 					<!-- Map container -->
-					<div class="footer-padding col-lg-12 map-area margin-top-3-percent padding-top-bottom" align="center">
+					<div class="footer-padding col-lg-12 map-area padding-top-bottom" align="center">
 						<div class="row">
-							<div class="col-lg-6 margin-top-3-percent">
+							<div class="col-lg-6">
 								<div class="card banner-map-card-shadow">
 									 <div class="card-body">
 									 	<div class="col-lg-9 col-7 padding-bottom-2em">
@@ -290,7 +295,7 @@
 									</div> 
 								</div>
 							</div>
-							<div class="col-lg-6 margin-top-3-percent">
+							<div class="col-lg-6">
 								<div class="card banner-map-card-shadow">
 									 <div class="card-body">
 									 	<div class="col-lg-9 col-7 padding-bottom-2em">
@@ -319,30 +324,30 @@
 					    			</div>
 				    			</div>		    			
 							</div>
-							<div class="container">
-			    				<div class="row" id="footer_contact_details">
-			    					<div class="col-lg-4 col-md-4 col-4" align="center">
-			    						<a href="https://www.facebook.com/umasankarrasigan" target="_blank">
-						    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
-						    			   		<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</p>
-						    			   </div>
-					    			   </a>			    			   
-				    				</div>
-				    				<div class="col-lg-4 col-md-4 col-4" align="center">				    					 
-					    			   	<a href = "mailto:umasankar.tsj@gmail.com" target="_blank">
-						    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
-						    			   		<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-envelope" aria-hidden="true"></i> Email</p>
-						    			   </div>
-					    			   </a>				    			   
-				    				</div>
-				    				<div class="col-lg-4 col-md-4 col-4" align="center">
-					    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
-					    			   	<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-mobile" aria-hidden="true"></i> 8807527642</p>
-					    			   </div>
-				    				</div>
-			    				</div>
-							</div>
 						</div>
+						<div class="container">
+		    				<div class="row" id="footer_contact_details" >
+		    					<div class="col-lg-4 col-md-4 col-4" align="center">
+		    						<a href="https://www.facebook.com/umasankarrasigan" target="_blank">
+					    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
+					    			   		<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</p>
+					    			   </div>
+				    			   </a>			    			   
+			    				</div>
+			    				<div class="col-lg-4 col-md-4 col-4" align="center">				    					 
+				    			   	<a href = "mailto:umasankar.tsj@gmail.com" target="_blank">
+					    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
+					    			   		<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-envelope" aria-hidden="true"></i> Email</p>
+					    			   </div>
+				    			   </a>				    			   
+			    				</div>
+			    				<div class="col-lg-4 col-md-4 col-4" align="center">
+				    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
+				    			   	<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-mobile" aria-hidden="true"></i> 8807527642</p>
+				    			   </div>
+			    				</div>
+		    				</div>
+		    			</div>
 					</div>
 					<!-- Footer ends-->
 
