--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</div>
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border2.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 					<!-- Banner name container ends -->
@@ -116,7 +116,7 @@
 					</div>
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border2.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 
@@ -168,7 +168,7 @@
 					<!-- Counter Timer ends-->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border2.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 
@@ -251,7 +251,7 @@
 					<!--Wedding Details ends -->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border2.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 
@@ -273,14 +273,14 @@
 					<!-- Wedding Welcome area-->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border2.png" class="img-fluid" id="image-shadow">
 						</div>
 					</div>
 
 					<!-- Map container -->
 					<div class="footer-padding col-lg-12 map-area padding-top-bottom" align="center">
 						<div class="row">
-							<div class="col-lg-6">
+							<div class="col-lg-6 map-padding">
 								<div class="card banner-map-card-shadow">
 									 <div class="card-body">
 									 	<div class="col-lg-9 col-7 padding-bottom-2em">
@@ -295,7 +295,7 @@
 									</div> 
 								</div>
 							</div>
-							<div class="col-lg-6">
+							<div class="col-lg-6 map-padding">
 								<div class="card banner-map-card-shadow">
 									 <div class="card-body">
 									 	<div class="col-lg-9 col-7 padding-bottom-2em">
