--- a/index.html
+++ b/index.html
@@ -51,25 +51,30 @@
 				<section>
 					<!-- Banner name container -->
 					<div class="container-fluid padding-bottom-2em" >
-						<div class="section card banner-map-card-shadow card-border-none banner-bg-image img-fluid">
+						<div class="section card banner-map-card-shadow card-border-none img-fluid">
 							<div class="card-body padding-top-bottom">
 								<div class="container" align="center">
 									<div class="row">
 										<div class="col-lg-5">
-											<h2 class="banner-couple-name heading-text-shadow">Umasankar</h2>
+											<h2 class="banner-couple-name heading-text-shadow d-none d-sm-block">Umasankar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+											<h2 class="banner-couple-name heading-text-shadow d-block d-sm-none">Umasankar</h2>
 										</div>
 										<div class="col-lg-2">
-											<img id="image-shadow" src="images/holding-hands.png" alt="Couple Hands">
+											<img id="image-shadow" class="img-fluid d-none d-sm-block" src="images/holding-hands.png" alt="Couple Hands" style="margin-top: 7%">
+											<img id="image-shadow" class="img-fluid d-block d-sm-none" src="images/holding-hands.png" alt="Couple Hands">
 										</div>
 										<div class="col-lg-5">
 											<h2 class="banner-couple-name heading-text-shadow">Aarthy</h2>
 										</div>
 									</div>
 								</div>
-								<div align="center" class="margin-top-3-percent">
+								<div class="col-lg-12 margin-top-3-percent" align="center">
+									<img class="img-fluid" src="images/banner-image.jpg" alt="Wedding Ceremony Banner">
+								</div>
+								<div align="center">
 									<h4 class="banner-couple-description small-heading-shadow">A Beautiful Bride & Handsome Groom </h4>
 									<p class="banner-couple-small-font small-heading-shadow">are getting married</p>
-									<p class="small-heading-shadow font-bold banner-date-font">15 FEBRUARY 2019</p>
+									<p class="small-heading-shadow font-bold banner-date-font margin-top-3-percent">15 FEBRUARY 2019</p>
 								</div>
 							</div>
 						</div>
@@ -137,7 +142,7 @@
 					                        <div class="counter-smalltext">Hours</div>
 					                    </div>
 					                    <div class="col counter-img">
-					                    	<img id="image-shadow" src="images/timer-couple.png" alt="Wedding Couple">
+					                    	<img id="image-shadow" src="images/timer-couple.png" class="img-fluid" alt="Wedding Couple">
 					                    </div>
 					                    <div class="col counter-clockinner counter-clock-shadow">
 					                        <span class="minutes heading-text-shadow" id="event_minutes"></span>
@@ -152,7 +157,7 @@
 					                	<div class="row no-padding" align="center">
 											<div class="col-lg-12">
 												 <div class="col counter-img">
-					                    			<img id="image-shadow" src="images/timer-couple.png" alt="Wedding Couple">
+					                    			<img id="image-shadow" class="img-fluid" src="images/timer-couple.png" alt="Wedding Couple">
 					                    		</div>
 					                    		<div class="padding-top-bottom">
 													<p class="heading-text-shadow">Got Married, Started a new fantastic journey.</p>
@@ -263,7 +268,7 @@
 									<div class="col-lg-12 padding-bottom-2em" align="center">
 										<p class="margin-top-3-percent">We <b>Umasankar & Aarthy</b> are stepping into a new beginning of wedding life.</p>
 										<p class="margin-top-3-percent">Together with our parents, All our need is your presence.</p>
-										<img src="images/welcome-bg.png" id="image-shadow" alt="Welcome" class="img-fluid">
+										<img src="images/welcome-bg.jpg" alt="Welcome" class="img-fluid">
 										<h1 class="font-bold small-heading-shadow ">You Are Most Welcome</h1>
 									</div>
 								</div>
