--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
 								<div class="container" align="center">
 									<div class="row">
 										<div class="col-lg-5">
-											<h2 class="banner-couple-name heading-text-shadow d-none d-sm-block">Umasankar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-											<h2 class="banner-couple-name heading-text-shadow d-block d-sm-none">Umasankar</h2>
+											<h2 class="banner-couple-name heading-text-shadow">Umasankar</h2>
 										</div>
 										<div class="col-lg-2">
-											<img id="image-shadow" class="img-fluid d-none d-sm-block" src="images/holding-hands.png" alt="Couple Hands" style="margin-top: 7%">
-											<img id="image-shadow" class="img-fluid d-block d-sm-none" src="images/holding-hands.png" alt="Couple Hands">
+											<img id="image-shadow-holding-hand" class="img-fluid banner-holding-hand-margin" src="images/holding-hands.png" alt="Couple Hands">
 										</div>
 										<div class="col-lg-5">
-											<h2 class="banner-couple-name heading-text-shadow">Aarthy</h2>
+											<h2 class="banner-couple-name heading-text-shadow banner-bride-name-margin">Aarthy</h2>
 										</div>
 									</div>
 								</div>
@@ -157,7 +155,7 @@
 					                	<div class="row no-padding" align="center">
 											<div class="col-lg-12">
 												 <div class="col counter-img">
-					                    			<img id="image-shadow" class="img-fluid" src="images/timer-couple.png" alt="Wedding Couple">
+					                    			<img id="image-shadow" src="images/timer-couple.png" alt="Wedding Couple">
 					                    		</div>
 					                    		<div class="padding-top-bottom">
 													<p class="heading-text-shadow">Got Married, Started a new fantastic journey.</p>
