--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											<h2 class="banner-couple-name heading-text-shadow">Umasankar</h2>
 										</div>
 										<div class="col-lg-2">
-											<img id="banner-image-holding-hand" class="img-fluid banner-holding-hand-margin" src="images/holding-hands.png" alt="Couple Hands">
+											<img id="image-shadow" class="img-fluid banner-holding-hand-margin" src="images/holding-hands.png" alt="Couple Hands">
 										</div>
 										<div class="col-lg-5">
 											<h2 class="banner-couple-name heading-text-shadow banner-bride-name-margin">Aarthy</h2>
@@ -133,22 +133,22 @@
 									<div class="row align-items-end" id="timer_count" hidden="">
 					                    <div class="col counter-clock-shadow counter-clockinner">
 					                        <span class="days heading-text-shadow" id="event_days"></span>
-					                        <div class="counter-smalltext">Days</div>
+					                        <div class="counter-smalltext very-small-shadow">Days</div>
 					                    </div>
 					                    <div class="col counter-clockinner counter-clock-shadow">
 					                        <span class="hours heading-text-shadow" id="event_hours"></span>
-					                        <div class="counter-smalltext">Hours</div>
+					                        <div class="counter-smalltext very-small-shadow">Hours</div>
 					                    </div>
 					                    <div class="col counter-img">
 					                    	<img id="image-shadow" src="images/timer-couple.png" class="img-fluid" alt="Wedding Couple">
 					                    </div>
 					                    <div class="col counter-clockinner counter-clock-shadow">
 					                        <span class="minutes heading-text-shadow" id="event_minutes"></span>
-					                        <div class="counter-smalltext">Minutes</div>
+					                        <div class="counter-smalltext very-small-shadow">Minutes</div>
 					                    </div>
 					                    <div class="col counter-clockinner counter-clock-shadow">
 					                        <span class="seconds heading-text-shadow" id="event_seconds"></span>
-					                        <div class="counter-smalltext">Seconds</div>
+					                        <div class="counter-smalltext very-small-shadow">Seconds</div>
 					                    </div>					                   
 					                </div>
 					                <div id="event_completed" hidden="hidden">
@@ -192,7 +192,7 @@
 											<h4 class="title small-heading-shadow">RECEPTION</h4>
 											<div class="row" >
 												<p class="col-lg-1 col-2"><i class="fa fa-calendar-o w-detail-font-icon-color" aria-hidden="true"></i></p>
-												<p class="col-lg-11 col-10"> 14 Thursday</p>
+												<p class="col-lg-11 col-10 very-small-shadow"> 14 Thursday</p>
 											</div>
 											<div class="row" >
 												<p class="col-lg-1 col-2"><i class="fa fa-calendar-o w-detail-font-icon-color" aria-hidden="true"></i></p>
@@ -264,8 +264,8 @@
 							<div class="card-body">
 								<div class="container" id="welcome-container">
 									<div class="col-lg-12 padding-bottom-2em" align="center">
-										<p class="margin-top-3-percent">We <b>Umasankar & Aarthy</b> are stepping into a new beginning of wedding life.</p>
-										<p class="margin-top-3-percent">Together with our parents, All our need is your presence.</p>
+										<p class="margin-top-3-percent very-small-shadow">We <b>Umasankar & Aarthy</b> are stepping into a new beginning of wedding life.</p>
+										<p class="margin-top-3-percent very-small-shadow">Together with our parents, All our need is your presence.</p>
 										<img src="images/welcome-bg.jpg" alt="Welcome" class="img-fluid">
 										<h1 class="font-bold small-heading-shadow ">You Are Most Welcome</h1>
 									</div>
@@ -293,7 +293,8 @@
 					    				<a href="https://goo.gl/maps/SVTpfjnpYf42" target="_blank">
 			    							<h4 class="margin-top-3-percent small-heading-shadow ">Nagarathinam Angalammal</h4>
 			    							<h4 class="small-heading-shadow">Wedding Hall</h4>
-			    							<p>Villapuram, Madurai</p>
+			    							<p class="very-small-shadow">Villapuram, Madurai</p>
+			    							<h6 class="very-small-shadow">Click here to open Location</h6>
 			  							</a>
 									</div> 
 								</div>
@@ -306,13 +307,23 @@
 									 	</div>
 					    				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d245.65063098068657!2d78.12023436058011!3d9.89976122575888!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00c565a77866bb%3A0x18afa35cd3a32890!2sPuthu+Surangudi+Marriage+Hall!5e0!3m2!1sen!2sin!4v1547574225978" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 					    				<a href="https://goo.gl/maps/XCAn4ZnNK3N2" target="_blank">
-			    							<h4 class="margin-top-3-percent small-heading-shadow ">Puthu Soorakudi</h4>
+			    							<h4 class="margin-top-3-percent small-heading-shadow">Puthu Soorakudi</h4>
 			    							<h4 class="small-heading-shadow ">Wedding Hall</h4>
-			    							<p>Villapuram, Madurai</p>
+			    							<p class="very-small-shadow">Villapuram, Madurai</p>
+			    							<h6 class="very-small-shadow">Click here to open Location</h6>
 			  							</a>
 									</div> 
 								</div>
 							</div>
+						</div>
+						<div class="row justify-content-center" style="padding-top: 2em;">
+							<div>
+	    						<a href="https://goo.gl/maps/Qg1NDj8oYaC2" target="_blank" >
+				    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
+				    			   		<p class="font-bold small-heading-shadow padding-5px padding-left-right footer-contact-font-size">Click here to find route between Groom and Bride Wedding Hall</p>
+				    			   </div>
+			    			   </a>			    			   
+		    				</div>
 						</div>
 					</div>
 					<!-- Map container ends -->
@@ -320,9 +331,9 @@
 					<!-- Footer -->					
 					<div class="footer-bg-image justify-content-center footer-container-padding">
 						<div class="row justify-content-center">
-							<div class="col-lg-5 col-8 footer-padding ">
+							<div class="footer-padding ">
 								<div class="card card-radius banner-map-card-shadow card-opacity">
-					    			<div align="center">
+					    			<div align="center" class="padding-left-right">
 					    				<img class="img-fluid footer-card-logo footer-logo-margin" src="images/footer-logo.png"><span class="footer-rasigan-font font-bold small-heading-shadow"> Rasigan</span> <span class="small-heading-shadow footer-contact-font-size" style="font-weight: bolder;">&nbsp;Fashion Designer and Advisor</span>
 					    			</div>
 				    			</div>		    			
