--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					</div>
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border1.png" class="img-fluid" id="divider-image-shadow">
 						</div>
 					</div>
 					<!-- Banner name container ends -->
@@ -119,7 +119,7 @@
 					</div>
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border1.png" class="img-fluid" id="divider-image-shadow">
 						</div>
 					</div>
 
@@ -140,7 +140,7 @@
 					                        <div class="counter-smalltext very-small-shadow">Hours</div>
 					                    </div>
 					                    <div class="col counter-img">
-					                    	<img id="image-shadow" src="images/timer-couple.png" class="img-fluid" alt="Wedding Couple">
+					                    	<img id="image-shadow" src="images/timer-couple.png" alt="Wedding Couple">
 					                    </div>
 					                    <div class="col counter-clockinner counter-clock-shadow">
 					                        <span class="minutes heading-text-shadow" id="event_minutes"></span>
@@ -171,7 +171,7 @@
 					<!-- Counter Timer ends-->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border1.png" class="img-fluid" id="divider-image-shadow">
 						</div>
 					</div>
 
@@ -254,7 +254,7 @@
 					<!--Wedding Details ends -->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border1.png" class="img-fluid" id="divider-image-shadow">
 						</div>
 					</div>
 
@@ -276,7 +276,7 @@
 					<!-- Wedding Welcome area-->
 					<div class="row" align="center">
 						<div class="col-lg-12 padding-top-bottom">
-							<img src="images/border1.png" class="img-fluid" id="image-shadow">
+							<img src="images/border1.png" class="img-fluid" id="divider-image-shadow">
 						</div>
 					</div>
 
