--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 											<img src="images/location-icon.png" class="img-fluid">
 											<h4 class="title small-heading-shadow">BRIDE<br>WEDDING HALL</h4>
 											<div class="row">
-												<p class="col-lg-11 col-10">Puthu Soorakudi<br>Wedding Hall </p>
+												<p class="col-lg-11 col-10">Puthu Surangudi<br>Wedding Hall </p>
 												<p class="col-lg-1 col-2"><i class="fa fa-map-signs w-detail-font-icon-color" aria-hidden="true"></i></p>
 											</div>
 											<div class="row">
@@ -307,7 +307,7 @@
 									 	</div>
 					    				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d245.65063098068657!2d78.12023436058011!3d9.89976122575888!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00c565a77866bb%3A0x18afa35cd3a32890!2sPuthu+Surangudi+Marriage+Hall!5e0!3m2!1sen!2sin!4v1547574225978" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 					    				<a href="https://goo.gl/maps/XCAn4ZnNK3N2" target="_blank">
-			    							<h4 class="margin-top-3-percent small-heading-shadow">Puthu Soorakudi</h4>
+			    							<h4 class="margin-top-3-percent small-heading-shadow">Puthu Surangudi</h4>
 			    							<h4 class="small-heading-shadow ">Wedding Hall</h4>
 			    							<p class="very-small-shadow">Villapuram, Madurai</p>
 			    							<h6 class="very-small-shadow">Click here to open Location</h6>
@@ -339,7 +339,7 @@
 				    			</div>		    			
 							</div>
 						</div>
-						<div class="container">
+						<div class="container-fluid">
 		    				<div class="row" id="footer_contact_details" >
 		    					<div class="col-lg-4 col-md-4 col-4" align="center">
 		    						<a href="https://www.facebook.com/umasankarrasigan" target="_blank">
@@ -356,9 +356,11 @@
 				    			   </a>				    			   
 			    				</div>
 			    				<div class="col-lg-4 col-md-4 col-4" align="center">
-				    			   <div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
-				    			   	<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-mobile" aria-hidden="true"></i> 8807527642</p>
-				    			   </div>
+			    					<a href="tel:8807527642">
+				    			   		<div class="card banner-map-card-shadow card-radius padding-top-bottom-px card-opacity">
+				    			   			<p class="font-bold small-heading-shadow footer-contact-font-size"><i class="fa fa-mobile" aria-hidden="true"></i> +91 8807527642</p>
+				    			   		</div>
+				    				</a>
 			    				</div>
 		    				</div>
 		    			</div>
